# cider-mpris

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md  cider-mpris.service  cider.desktop  flake.nix  home-module.nix  org.mpris.MediaPlayer2.cider-mpris.service  org.mpris.MediaPlayer2.cider.service  result
.pi/extensions/: guardrails.json
docs/: cider-rpc-api.md
docs/engineering-discipline/plans/: 2026-04-26-mpris-bridge.md
docs/superpowers/plans/: 2026-04-27-mpris-bridge-completion.md  2026-04-28-post-mvp-features.md  2026-04-29-volume-support.md
docs/superpowers/specs/: 2026-04-27-cider-mpris-completion-design.md  2026-04-28-post-mvp-features-design.md  2026-04-29-volume-support-design.md
src/: main.rs
src/cider/: mod.rs  types.rs
src/mpris/: mod.rs  player.rs  root.rs
